[workspace]
resolver = "2"
members = [
    "liblogging",
    "sandbox",
    "client_libraries/libconfmon",
    "client_libraries/traffic_monitor",
    "server_libraries/libdatastore",
    "server_libraries/libfireparse",
    "server_libraries/libipinfo",
    "server_libraries/libtoken"]

#[workspace.package]
#authors = ["Author Name <author@name.com>"]

#[workspace.dependencies]
#nullnet-liblogging = "0.1.0"
