[workspace]
resolver = "2"
members = [
    "liberror",
    "liblogging",
    "sandbox",
    "client_libraries/libconfmon",
    "client_libraries/libresmon",
    "client_libraries/traffic_monitor",
    "server_libraries/libdatastore",
    "server_libraries/libfireparse",
    "server_libraries/libipinfo",
    "server_libraries/libtoken"]

#[workspace.package]
#authors = ["Author Name <author@name.com>"]

#[workspace.dependencies]
