[package]
name = "nullnet-liblogging"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "Logging library for NullNet"
readme = "README.md"

[dependencies]
nullnet-liberror = { version = "0.1.0", path = "../liberror" }
nullnet-libdatastore = { path = "../server_libraries/libdatastore" }
log = "0.4.26"
syslog = "7.0.0"
chrono = "0.4.39"
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
futures = { version = "0.3.31", features =["executor"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
