[package]
name = "nullnet-liblogging"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/NullNet-ai/libguard"
license = "AGPL-3.0-only"
description = "Logging library for NullNet"
readme = "README.md"
default-run = "sample"

[dependencies]
nullnet-libappguard = "0.1.5"
nullnet-libwallguard = "0.1.4"
log = "0.4.26"
syslog = "7.0.0"
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
