[package]
name = "libtunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.26"
nullnet-liberror = { version = "0.1.0", path = "../liberror" }
nullnet-liblogging = { version = "0.2.0", path = "../liblogging" }
serde = {version = "1.0.218", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
