[package]
name = "nullnet-libtunnel"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "Library for tunneling traffic"
readme = "README.md"

[dependencies]
bincode = "1.3.3"
log = "0.4.26"
nullnet-liberror = "0.1.1"
serde = {version = "1.0.218", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
