[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = {version = "4.5.31", features = ["derive"] }
nullnet-libtunnel = { version = "0.1.0", path = "../libtunnel" }
log = "0.4.26"
nullnet-libdatastore = { path = "../server_libraries/libdatastore" }
nullnet-liblogging = "0.2.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }


