[package]
name = "nullnet-libconfmon"
version = "0.2.3"
edition = "2021"
authors= ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "Configuration monitoring library for NullNet targets"
readme = "README.md"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
