[package]
name = "nullnet-libconfmon"
version = "0.2.5"
edition = "2024"
authors= ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "AGPL-3.0-only"
description = "Configuration monitoring library for NullNet targets"
readme = "README.md"

[dependencies]
bincode = "1.3.3"
get_if_addrs = "0.5.3"
pnet = "0.35.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
