[package]
name = "nullnet-traffic-monitor"
version = "0.1.3"
edition = "2021"
authors= ["Giuliano Bellini <gyulyvgc89@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "Traffic monitor library for NullNet targets"
readme = "README.md"

[features]
export-pcap = []

[dependencies]
pcap = "2.2.0"
chrono = { version = "0.4.39", features = ["clock"] }
log = "0.4.26"
