[package]
name = "nullnet-traffic-monitor"
version = "0.1.4"
edition = "2024"
authors= ["Giuliano Bellini <gyulyvgc89@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "AGPL-3.0-only"
description = "Traffic monitor library for NullNet targets"
readme = "README.md"

[features]
export-pcap = []

[dependencies]
pcap = "2.2.0"
chrono = { version = "0.4.39", features = ["clock"] }
log = "0.4.26"
async-channel = "2.3.1"
