[package]
name = "nullnet-libdatastore"
version = "0.4.0"
edition = "2024"
authors= ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "Nullnet datastore driver"
readme = "README.md"

[dependencies]
nullnet-liberror = "0.1.1"
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
log = "0.4.26"

[build-dependencies]
tonic-build = "0.12.3"
