[package]
name = "nullnet-libfireparse"
version = "0.3.1"
edition = "2024"
authors= ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "A library for parsing and translating firewall configurations across multiple NullNet targets"
readme = "README.md"

[lib]
name = "libfireparse"

[dependencies]
base64 = "0.22.1"
roxmltree = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
nullnet-libconfmon = "=0.2.5"