[package]
name = "nullnet-libipinfo"
version = "0.1.0"
edition = "2021"

[features]
blacklist = []

[dependencies]
maxminddb = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros"] }
chrono = "0.4.39"
zip-extract = "0.2.1"
tempfile = "3.16.0"
flate2 = "1.0.35"