[package]
name = "nullnet-libipinfo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NullNet-ai/libguard"
license = "MIT"
description = "IP information library for NullNet"
readme = "README.md"

[dependencies]
nullnet-liberror = "0.1.1"
maxminddb = "0.25.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.39"
flate2 = "1.0.35"
log = "0.4.25"
once_cell = "1.21.1"