[package]
name = "nullnet-libtoken"
version = "0.2.0"
edition = "2024"
authors= ["Anton Liashkevich <anton.liashkevich.eng@gmail.com>"]
repository = "https://github.com/NullNet-ai/libguard"
license = "AGPL-3.0-only"
description = "Library for managing and interacting with NullNet token structure"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"